--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-scroll": "^1.9.3",
     "react-spinner": "^0.2.7",
     "react-spinners": "^0.15.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
